feat: data collection

--- a/notebook/text_based_emotion_recog.ipynb
+++ b/notebook/text_based_emotion_recog.ipynb
@@ -1,12 +1,242 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7961b4c9-c47a-44d3-a5dc-f7601fb4c7f0",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Text-based Emotion Recogition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de0f2358-c598-401c-ab0b-41763262f9df",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Import packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ada4a78-555a-44a3-898a-3bb14a5b6353",
+   "execution_count": 2,
+   "id": "e0bb32ef-39fd-4baa-9d9a-7ab51ca071c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# data tools\n",
+    "# manpulate data\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# visualize data\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# clean text\n",
+    "import neattext.functions as nfx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "999bb14c-c859-481f-b4e5-51b9e338c4a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model tools\n",
+    "# estimators\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "# transformers\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba5731cb-7443-402e-8f34-7f904822f30b",
+   "metadata": {},
+   "source": [
+    "### Download Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b074de93-56e9-46cd-8e15-992c7700143a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Emotion</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>neutral</td>\n",
+       "      <td>Why ?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>joy</td>\n",
+       "      <td>Sage Act upgrade on my to do list for tommorow.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sadness</td>\n",
+       "      <td>ON THE WAY TO MY HOMEGIRL BABY FUNERAL!!! MAN ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>joy</td>\n",
+       "      <td>Such an eye ! The true hazel eye-and so brill...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>joy</td>\n",
+       "      <td>@Iluvmiasantos ugh babe.. hugggzzz for u .!  b...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Emotion                                               Text\n",
+       "0  neutral                                             Why ? \n",
+       "1      joy    Sage Act upgrade on my to do list for tommorow.\n",
+       "2  sadness  ON THE WAY TO MY HOMEGIRL BABY FUNERAL!!! MAN ...\n",
+       "3      joy   Such an eye ! The true hazel eye-and so brill...\n",
+       "4      joy  @Iluvmiasantos ugh babe.. hugggzzz for u .!  b..."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load dataset\n",
+    "df = pd.read_csv(\"../data/emotion_dataset_raw.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8fe186e7-fc89-43c6-9ab6-7d82538ce065",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "joy         11045\n",
+       "sadness      6722\n",
+       "fear         5410\n",
+       "anger        4297\n",
+       "surprise     4062\n",
+       "neutral      2254\n",
+       "disgust       856\n",
+       "shame         146\n",
+       "Name: Emotion, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check data\n",
+    "df[\"Emotion\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e11331cc-7efe-4c05-9db5-25fdd2e6286a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.describe of         Emotion                                               Text\n",
+       "0       neutral                                             Why ? \n",
+       "1           joy    Sage Act upgrade on my to do list for tommorow.\n",
+       "2       sadness  ON THE WAY TO MY HOMEGIRL BABY FUNERAL!!! MAN ...\n",
+       "3           joy   Such an eye ! The true hazel eye-and so brill...\n",
+       "4           joy  @Iluvmiasantos ugh babe.. hugggzzz for u .!  b...\n",
+       "...         ...                                                ...\n",
+       "34787  surprise  @MichelGW have you gift! Hope you like it! It'...\n",
+       "34788       joy  The world didnt give it to me..so the world MO...\n",
+       "34789     anger                           A man robbed me today . \n",
+       "34790      fear  Youu call it JEALOUSY, I call it of #Losing YO...\n",
+       "34791   sadness  I think about you baby, and I dream about you ...\n",
+       "\n",
+       "[34792 rows x 2 columns]>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check data\n",
+    "df.describe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a7b03316-3dbb-46da-af16-0d56eb297f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 34792 entries, 0 to 34791\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Emotion  34792 non-null  object\n",
+      " 1   Text     34792 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 543.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check data\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
