feat: data modeling

--- a/notebook/text_based_emotion_recog.ipynb
+++ b/notebook/text_based_emotion_recog.ipynb
@@ -27,15 +27,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data tools\n",
-    "# manpulate data\n",
+    "# Data tools\n",
+    "# Manpulate data\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# visualize data\n",
+    "# Visualize data\n",
     "import seaborn as sns\n",
     "\n",
-    "# clean text\n",
+    "# Clean text\n",
     "import neattext.functions as nfx"
    ]
   },
@@ -46,15 +46,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model tools\n",
-    "# estimators\n",
+    "# Model tools\n",
+    "# Estimators\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
-    "# transformers\n",
+    "# Transformers\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix"
+    "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix\n",
+    "\n",
+    "# Pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import joblib"
    ]
   },
   {
@@ -281,8 +285,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0b38111-fd61-4245-a9be-95980de903e0",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "bfcca1f1-9431-4981-8e50-dd7187f80872",
    "metadata": {},
    "outputs": [],
@@ -293,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "708fdc36-fa51-4f8d-8473-92b47ddd4c5c",
    "metadata": {},
    "outputs": [],
@@ -304,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "98054cdf-bae1-4eb8-800d-9345724b9d84",
    "metadata": {},
    "outputs": [
@@ -436,7 +450,7 @@
        "[34792 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,12 +460,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "857844ee-5ff8-4896-88b2-18c51252fdb3",
+   "metadata": {},
+   "source": [
+    "#### Features engineering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a63bbcf-3b7c-48e9-be45-518b5d5a5cf0",
+   "execution_count": 11,
+   "id": "88d1e6c1-a849-4db3-99d3-665516c92485",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# future improvement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c7c4e8-4f44-4db0-a159-3c38acf58739",
+   "metadata": {},
+   "source": [
+    "### Data Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44b7a4dc-254a-4ec7-9bb1-544e3b6ed2b5",
+   "metadata": {},
+   "source": [
+    "#### Splitting Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9b73a2fa-ddb3-4026-b5b5-982ee091115b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define feature and predictor\n",
+    "X = df['Clean_Text']\n",
+    "y = df['Emotion']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e5708e0b-0bfc-4e37-95da-92fff4a349a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into train and test\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba94ed2-5e38-4ad4-aa53-51b7e7e128c2",
+   "metadata": {},
+   "source": [
+    "#### Buildling Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "07697ccc-0eae-447a-8f66-e8a3e3eb0b59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build Logistic Regression pipeline\n",
+    "pipeline_lr = Pipeline(steps=[('cv', CountVectorizer()),('lr', LogisticRegression())])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ead5e59-0e27-432d-af10-49be99bc7905",
+   "metadata": {},
+   "source": [
+    "#### Training Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7573e6cd-47a9-41b7-93d9-bb7f90bdecce",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Panitnun\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('cv', CountVectorizer()), ('lr', LogisticRegression())])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train model\n",
+    "pipeline_lr.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f2afdf1-b5a2-42f5-b912-a178dc21b973",
+   "metadata": {},
+   "source": [
+    "#### Evaluating Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2813236f-3652-4c2c-8319-b704225f603b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6200421536692853"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check accuracy\n",
+    "pipeline_lr.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c3723ea0-d56b-4abb-93d9-768a4f3f8dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a prediction from random sentence\n",
+    "ex1 = \"This book was so interesting, so it made me happy after read it\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b0a3e513-373a-4928-bfa3-0b92b9fc8c51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['joy'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_lr.predict([ex1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "da2a8ade-dc1e-411e-8380-1bc2b53f2625",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9.83908393e-04, 4.30304354e-03, 1.59949595e-02, 7.89891011e-01,\n",
+       "        1.83511793e-05, 1.82343758e-01, 3.46547192e-05, 6.43031348e-03]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_lr.predict_proba([ex1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e23e6309-123d-4375-a187-1648bc2b641f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['anger', 'disgust', 'fear', 'joy', 'neutral', 'sadness', 'shame',\n",
+       "       'surprise'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_lr.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8666cb11-adf3-4ec6-a025-dfa2603ed30a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted class = joy and confidence = 78.99%\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_prob = pipeline_lr.predict_proba([ex1])\n",
+    "ix = y_pred_prob.argmax(1).item()\n",
+    "classes = pipeline_lr.classes_\n",
+    "\n",
+    "print(f'predicted class = {classes[ix]} and confidence = {y_pred_prob[0,ix]:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ba42778a-fb65-475d-99e7-f8688bf00cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model and pipeline\n",
+    "pipeline_file = open('text_emotion_recog_model_test.pkl', 'wb')\n",
+    "joblib.dump(pipeline_lr, pipeline_file)\n",
+    "pipeline_file.close()"
+   ]
   }
  ],
  "metadata": {
